--- a/TODOs.org
+++ b/TODOs.org
@@ -5,6 +5,10 @@
   CLOSED: [2018-03-05 Mon 20:58]
 * DONE 前端：commands 标签页
   CLOSED: [2018-03-06 Tue 16:50]
-* TODO 前端：登录验证
+* DONE 前端：登录验证
+  CLOSED: [2018-03-08 Thu 19:14]
+* DONE 前端：commands content
+  CLOSED: [2018-03-09 Fri 20:16]
+* TODO 前端：sessions -> commands 跳转
 * TODO 后端：会话记录
 * TODO 前端：会话重放
