--- a/TODOs.org
+++ b/TODOs.org
@@ -9,6 +9,10 @@
   CLOSED: [2018-03-08 Thu 19:14]
 * DONE 前端：commands content
   CLOSED: [2018-03-09 Fri 20:16]
-* TODO 前端：sessions -> commands 跳转
-* TODO 后端：会话记录
-* TODO 前端：会话重放
+* DONE 前端：sessions -> commands 跳转
+  CLOSED: [2018-03-22 Thu 17:48]
+* DONE 后端：会话记录
+  CLOSED: [2018-03-22 Thu 17:48]
+* DONE 前端：会话重放
+  CLOSED: [2018-03-22 Thu 17:48]
+* TODO 后端：监控报警
